fixed footer height for spacing

--- a/my-portfolio/src/components/Footer/Footer.css
+++ b/my-portfolio/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    height: 60px;
+    height: 80px;
     display: flex;
     justify-content: flex-end;
     padding-right: 20px;
